@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.493 2007/04/12 09:53:12 martti Exp $
+# $NetBSD: Makefile,v 1.494 2007/04/12 15:10:12 joerg Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -195,6 +195,7 @@ SUBDIR+=	libXinerama
 SUBDIR+=	libXmu
 SUBDIR+=	libXp
 SUBDIR+=	libXpm
+SUBDIR+=	libXprintUtil
 SUBDIR+=	libXrandr
 SUBDIR+=	libXrender
 SUBDIR+=	libXres
@@ -286,6 +287,7 @@ SUBDIR+=	recordproto
 SUBDIR+=	renderproto
 SUBDIR+=	rep-gtk
 SUBDIR+=	resourceproto
+SUBDIR+=	rgb
 SUBDIR+=	rox-session
 SUBDIR+=	rox-wallpaper
 SUBDIR+=	ruby-gnome2-gnome
@@ -443,8 +445,8 @@ SUBDIR+=	xmindpath
 SUBDIR+=	xmms-osd
 SUBDIR+=	xmodmap
 SUBDIR+=	xmon
-SUBDIR+=	xmountains
 SUBDIR+=	xmore
+SUBDIR+=	xmountains
 SUBDIR+=	xmove
 SUBDIR+=	xmx
 SUBDIR+=	xneko
@@ -461,15 +463,18 @@ SUBDIR+=	xpaste
 SUBDIR+=	xpenguins
 SUBDIR+=	xphoon
 SUBDIR+=	xplanet
+SUBDIR+=	xplsprinters
 SUBDIR+=	xpmicons
 SUBDIR+=	xpmroot
 SUBDIR+=	xpns
 SUBDIR+=	xpostit
+SUBDIR+=	xprehashprinterlist
 SUBDIR+=	xprop
 SUBDIR+=	xproto
 SUBDIR+=	xproxymanagementprotocol
 SUBDIR+=	xrandr
 SUBDIR+=	xrdb
+SUBDIR+=	xrefresh
 SUBDIR+=	xrestop
 SUBDIR+=	xscreensaver
 SUBDIR+=	xscreensaver-demo
@@ -480,6 +485,7 @@ SUBDIR+=	xset
 SUBDIR+=	xsetmode
 SUBDIR+=	xsetpointer
 SUBDIR+=	xsetroot
+SUBDIR+=	xsm
 SUBDIR+=	xsnow
 SUBDIR+=	xteddy
 SUBDIR+=	xteddy2
